# HW31

./: db.sqlite3  manage.py  pyproject.toml  pytest.ini
LHW27/: asgi.py  settings.py  urls.py  wsgi.py
ads/: models.py  permissions.py  serializers.py  validators.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_category_name.py  0002_initial.py  0003_selection.py
ads/urls/: ad.py  cat.py
ads/views/: ad.py  cat.py  selection.py
data/: ads.json  csv_to_json.py  user.json
tests/: factories.py  fixtures.py
tests/ad/: ad_create_test.py  ad_list_test.py
tests/selection/: selection_create_test.py
users/: admin.py  models.py  serializers.py  urls.py  validators.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_age.py  0002_alter_user_role.py
